Make links more subtle and fix theme dev webpack
Squashed commit of the following:

commit cc0940fc486a477f5f9245f7c534fdcac168c5aa
Author: briggySmalls <wasso14@hotmail.com>
Date:   Mon Jul 30 00:07:58 2018 +0100

    Improve webpack development experience

    Fix development watching for theme

    Set mode in webpack calls

    Also remove unnecessary whitespace

commit 25c07ee383345d8f46e1b3a5a0020e0ffbd506fb
Author: briggySmalls <wasso14@hotmail.com>
Date:   Sun Jul 29 23:42:30 2018 +0100

    Control how links appear sitewide

--- a/site/web/app/themes/sd-theme/resources/assets/styles/common/_variables.scss
+++ b/site/web/app/themes/sd-theme/resources/assets/styles/common/_variables.scss
@@ -2,5 +2,18 @@
 @import "~bootstrap/scss/functions";
 
 $theme-colors: (
-  primary: #525ddc
+  primary: #707070,
+  highlight: #ffab26,
 );
+
+@function theme-color($key) {
+  // Get the colour from the map
+  @if map-has-key($theme-colors, $key) {
+    @return map-get($theme-colors, $key);
+  }
+
+  // Warn that colour was not found in map
+  @warn "Unknown `#{$key}` in $colors.";
+
+  @return null;
+}
